--- a/windows/1-introduction/sample-loop-and-print/sample-loop-and-print.vcxproj
+++ b/windows/1-introduction/sample-loop-and-print/sample-loop-and-print.vcxproj
@@ -129,6 +129,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\common.cpp" />
     <ClCompile Include="cpu.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
