--- a/windows/1-introduction/a-multi-threaded-program/a-multi-threaded-program.vcxproj
+++ b/windows/1-introduction/a-multi-threaded-program/a-multi-threaded-program.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{f727eb98-0c39-4772-bc3b-3cba4a0264bf}</ProjectGuid>
     <RootNamespace>amultithreadedprogram</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>1-3-a-multi-threaded-program</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
