--- a/windows/1-introduction/access-memory/access-memory.vcxproj
+++ b/windows/1-introduction/access-memory/access-memory.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{3e882a6f-fe7b-4cf5-9e63-aa606d05b62f}</ProjectGuid>
     <RootNamespace>accessmemory</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>1-2-access-memory</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
