--- a/windows/2-introduction/sample-loop-and-print/sample-loop-and-print.vcxproj
+++ b/windows/2-introduction/sample-loop-and-print/sample-loop-and-print.vcxproj
@@ -21,10 +21,10 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{3e882a6f-fe7b-4cf5-9e63-aa606d05b62f}</ProjectGuid>
-    <RootNamespace>accessmemory</RootNamespace>
+    <ProjectGuid>{8a251902-97fa-4722-8001-07523521eda2}</ProjectGuid>
+    <RootNamespace>sampleloopandprint</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>1-2-access-memory</ProjectName>
+    <ProjectName>2-1-sample-loop-and-print</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -105,6 +105,8 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp20</LanguageStandard>
+      <LanguageStandard_C>stdc17</LanguageStandard_C>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -131,7 +133,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\common.cpp" />
-    <ClCompile Include="mem.cpp" />
+    <ClCompile Include="cpu.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
