--- a/windows/2-introduction/sample-loop-and-print/sample-loop-and-print.vcxproj.filters
+++ b/windows/2-introduction/sample-loop-and-print/sample-loop-and-print.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="cpu.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\common.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
