--- a/windows/2-Introduction/io/io.vcxproj
+++ b/windows/2-Introduction/io/io.vcxproj
@@ -24,7 +24,7 @@
     <ProjectGuid>{45787e4e-321f-4e04-9871-0b3695230f00}</ProjectGuid>
     <RootNamespace>sampleio</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>2-4-sample-io</ProjectName>
+    <ProjectName>io</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
