--- a/windows/code/5-Process-API/p1/p1.vcxproj.filters
+++ b/windows/code/5-Process-API/p1/p1.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="p1.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\common.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
